package com.devmo.mynotes.core.util

class TestTags {
    companion object{
        const val ORDER_SECTION = "ORDER_SECTION"
        const val TITLE_INPUT = "TITLE_INPUT"
        const val CONTENT_INPUT = "CONTENT_INPUT"
        const val SNAKEBAR = "SNAKEBAR"
        const val NOTE = "NOTE"
    }
}